--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,7 @@
-
-buildscript {
-    repositories {
-        maven { url 'https://plugins.gradle.org/m2/' }
-    }
-    dependencies {
-        val nav_version = "2.5.3"
-        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.11.0, 0.99.99]'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-    }
-}
-
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("androidx.navigation.safeargs")
 }
-
-apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
-
-apply plugin: 'com.android.application'
 
 android {
     namespace 'com.example.tespushnotif'
@@ -33,11 +16,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        manifestPlaceholders = [
-                onesignal_app_id               : '481b2b5d-eae3-4ace-bada-467dc00ab37e',
+        //manifestPlaceholders = [
+        //        onesignal_app_id               : '481b2b5d-eae3-4ace-bada-467dc00ab37e',
                 // Project number pulled from dashboard, local value is ignored.
-                onesignal_google_project_number: 'REMOTE'
-        ]
+        //        onesignal_google_project_number: 'REMOTE'
+        //]
     }
 
     buildTypes {
@@ -53,6 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -65,14 +51,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.onesignal:OneSignal:[3.9.1, 3.99.99]'
-    implementation 'com.google.android.gms:play-services-gcm:10.2.1'
-    implementation 'com.google.android.gms:play-services-analytics:10.2.1'
-    implementation 'com.google.android.gms:play-services-location:10.2.1'
+    //implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+    //implementation 'com.google.android.gms:play-services-gcm:10.2.1'
+    //implementation 'com.google.android.gms:play-services-analytics:10.2.1'
+    //implementation 'com.google.android.gms:play-services-location:10.2.1'
 
-    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
-    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+    //implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    //implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 }
