--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
     //implementation 'com.google.android.gms:play-services-gcm:10.2.1'
     //implementation 'com.google.android.gms:play-services-analytics:10.2.1'
